@@ -267,6 +267,9 @@
 	Fixed estimation calculation on file putting after cancellation.  Thanks to
 	Svyatoslav Mishyn, a.k.a. juef.
 
+	Fixed wrong single character drawing in ls-like view.  Thanks to Svyatoslav
+	Mishyn, a.k.a. juef.
+
 0.7.8-beta to 0.7.8
 
 	Added ga and gA keys to visual mode.  Thanks to geo909.
